--- a/app.json
+++ b/app.json
@@ -29,6 +29,22 @@
       "description": "Enter your DATABASE_NAME ",
       "value": "Sshankss"
     },
+    "SHORTLINK_URL":{
+      "description": "Enter your SHORTLINK_URL , add yr shortner url . ",
+      "value": "api.shareus.io"
+    },
+    "SHORTLINK_API":{
+      "description": "Enter yourSHORTLINK_API , add yr shortner api ",
+      "value": "710b7ed8fdc5f89e9036000cc10121921e7732f1"
+    },
+    "IS_VERIFY":{
+      "description": "True= (on)or False = (off) , value = True/False ",
+      "value": "True"
+    },
+    "VERIFY_EXPIRE":{
+      "description": "yr token timeout in seconds, 86400 = 24h",
+      "value": "86400"
+    },
     "API_HASH":{
       "description": "your api hash, take it from my.telegram.org",
       "value": "c0da9c346d2c45dbc7ec49a05da9b2b6"
